# potential-rotary-phone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.fx
include/common/: common.h  table.h  visitor.h
include/compiler/: compiler.h  registers.h
include/core/lexer/: lexer.h  token.h
include/core/parser/: ast.h  astvisitor.h  parser.h
include/core/repl/: interpreter.h
src/: main.cpp
src/common/: visitor.h
src/compiler/: compiler.cpp  compiler.h  registers.cpp
src/core/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/core/parser/: ast.cpp  ast.h  astvisitor.cpp  astvisitor.h  interpreter.cpp  interpreter.h  parser.cpp  parser.h  visitor.h
src/core/repl/: interpreter.cpp  interpreter.h
src/lib/: loguru.cpp
tests/: assert.sh  run.sh  test2  test3
tests/ptests/: test2.fx  test3.fx  test4.fx  test5.fx
